--- a/BasicWebDesign/index.html
+++ b/BasicWebDesign/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>CSS News: Breaking News!</title>
+	<title>CSS News!</title>
   <link rel="stylesheet" href="/style.css">
 	
 
@@ -14,20 +14,10 @@
 
 <body>
   <div class="center">
+    <h1>CSS News!</h1><br><br>
+
+    <p><a href="./article.html">Car Collision Injures 3</a></p>
     
-    <h1>
-      <strong>CSS Breaking News!</strong>
-    </h1>
-    <h2>
-      3 injured as car crashes into local convenience store
-    </h2><br>
-    <p>
-      On Jan 31st, 2024, at 10:35 AM, Mark Testaberger, age 34, drove his car through the wall of a local convenience store in Ridgefield, Washington.<br>
-      No fatalities, but three people, including the owner of the store, as well as his two son working in the store, were heavily injured, but are expected to make a full recovery.<br><br>
-      Officials say Mr. Testaberger was under the influence of methamphetamine, and reportedly possessed a felony amount of the substance <br>
-      in his glove compartment. The family of the injured have started a <a href="https://gofundme.com/">GoFundMe Page</a> to help raise money for their medical treatment and repairs for their store,
-      saying quote: <blockquote>"We will do whatever we can to keep our family business running"</blockquote>
-    </p>
   </div>
 	
 </body>
