--- a/BasicWebDesign/article.html
+++ b/BasicWebDesign/article.html
@@ -27,7 +27,8 @@
       Officials say Mr. Testaberger was under the influence of methamphetamine, and reportedly possessed a felony amount of the substance <br>
       in his glove compartment. The family of the injured have started a <a href="https://gofundme.com/">GoFundMe Page</a> to help raise money for their medical treatment and repairs for their store,
       saying quote: <blockquote>"We will do whatever we can to keep our family business running"</blockquote>
-    </p>
+    </p><br><br><br>
+    <p><a href="./index.html">Go Home</a></p>
   </div>
 	
 </body>
