--- a/BasicWebDesign/index.html
+++ b/BasicWebDesign/index.html
@@ -7,13 +7,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>CSS News!</title>
-  <link rel="stylesheet" href="/style.css">
-	
+  <style src="/style.css"></style>
 
 </head>
 
 <body>
   <div class="center">
+
     <h1>CSS News!</h1><br><br>
 
     <p><a href="./article.html">Car Collision Injures 3</a></p>
