--- a/BasicWebDesign/article.html
+++ b/BasicWebDesign/article.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>CSS News: Breaking News!</title>
-  <link rel="stylesheet" href="/style.css">
+  <style src="/style.css"></style>
 	
 
 </head>
