--- a/BasicWebDesign/index.html
+++ b/BasicWebDesign/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>CSS News!</title>
-  <style src="/style.css"></style>
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
