--- a/BasicWebDesign/index.html
+++ b/BasicWebDesign/index.html
@@ -16,8 +16,10 @@
 
     <h1>CSS News!</h1><br><br>
 
-    <p><a href="./article.html">Car Collision Injures 3</a></p>
+    <p><a href="./article.html">Car Collision Injures 3</a></p><br>
     
+    <h6>Weather</h6>
+    <p><a href="https://www.accuweather.com/en/us/ridgefield/98642/weather-forecast/351358">for Ridgefield</a></p>
   </div>
 	
 </body>
