--- a/gallery/index.html
+++ b/gallery/index.html
@@ -16,7 +16,7 @@
     <img src="https://images.unsplash.com/photo-1621584306021-884335044f5a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8c2VhJTIwY3VjdW1iZXJ8ZW58MHx8MHx8fDA%3D" width="250"><br>
     <p6>Source: <a href="https://unsplash.com/photos/brown-and-white-plant-on-gray-rock-I4wVXFr_zKY">Unsplash.com</a></p6><br>
     <img src="https://images.unsplash.com/photo-1507895253950-96a84b54bbc4?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="250"><br>
-    <p6>Source: <a href="https://unsplash.com/photos/macro-shot-of-jelly-fish-9mz2XG6stQg">Unsplash.com</a></p6>
+    <p6>Source: <a href="https://unsplash.com/photos/macro-shot-of-jelly-fish-9mz2XG6stQg">Unsplash.com</a></p6><br>
     <img src="https://images.unsplash.com/photo-1513040260736-63dd0617fb66?q=80&w=1434&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="250"><br>
     <p6>Source: <a href="https://unsplash.com/photos/close-up-photo-of-blue-and-green-fish-l-QdJMZX7PU">Unsplash.com</a></p6>
 
