--- a/gallery/index.html
+++ b/gallery/index.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Page Title</title>
-
+	<title>Gallery of non Copyright images</title>
+    
     <h1>Gallery</h1>
     <p1>Of non Copyright images</p1><br>
 
