--- a/tables/index.html
+++ b/tables/index.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html lang="en-us">
 
+<head>
+
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>Tables</title>
+	<style>
+        tr, td, th {
+
+            border:3px solid black;
+
+        }
+
+    </style>
+
+</head>
+
+<body>
+	
+    <table>
+        <caption>Anual deaths by icicle Globally</caption>
+        <tr>
+            <th colspan="5">Years</th>
+            <td rowspan="5">Regions</td>
+        </tr>
+        <tr>
+            <th></th>
+            <th>2015</th>
+            <th>2016</th>
+            <th>2017</th>
+            <th>2018</th>
+        </tr>
+        <tr>
+            <th>US</th>
+            <td>12</td>
+            <td>16</td>
+            <td>10</td>
+            <td>19</td>
+        </tr>
+        <tr>
+            <th>UK</th>
+            <td>15</td>
+            <td>16</td>
+            <td>13</td>
+            <td>14</td>
+        </tr>
+        <tr>
+            <th>RU</th>
+            <td>102</td>
+            <td>106</td>
+            <td>95</td>
+            <td>110</td>
+        </tr>
+    </table><br>
+
+    <ul>
+        <li>Russia has the highest average number of deaths by icicle anually</li>
+        <li>Because the UK is so compacted, a snowy season typically impacts a lot more people than the US</li>
+        <l1>The US has the lowest average number of deaths by icicle</l1>
+    </ul>
+
+</body>
+
+</html>
