--- a/tables/index.html
+++ b/tables/index.html
@@ -24,7 +24,7 @@
         <caption>Anual deaths by icicle Globally</caption>
         <tr>
             <th colspan="5">Years</th>
-            <td rowspan="5">Regions</td>
+            <th rowspan="5">Regions</th>
         </tr>
         <tr>
             <th></th>
@@ -59,7 +59,7 @@
     <ul>
         <li>Russia has the highest average number of deaths by icicle anually</li>
         <li>Because the UK is so compacted, a snowy season typically impacts a lot more people than the US</li>
-        <l1>The US has the lowest average number of deaths by icicle</l1>
+        <li>The US has the lowest average number of deaths by icicle</li>
     </ul>
 
 </body>
