--- a/math/index.html
+++ b/math/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en-us">
 
+<head>
+
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>Page Title</title>
+
+
+</head>
+
+<body>
+    <!--Start of Test-->
+    <h1>Math Test</h1>
+    <p>What is the proper symbol for multiplication in digital text?</p>
+    <form>
+        <select>
+            <option value="x">x</option>
+            <option value="star">&#8902;</option>
+            <option value="times">times</option>
+        </select><br>
+        <p>What is the correct order of operations?</p>
+        <select>
+            <option value="PAMDES">Parenthesis, Additon & Multiplication, Division & Exponents, Subtraction</option>
+            <option value="PEDSAM">Parenthesis & Exponents, Division, Subtraction, Addition & Multiplication</option>
+            <option value="PEMDAS">Parenthesis, Exponents, Multiplication & Division, Addition & Subtracton</option>
+        </select><br>
+        <p>What is the hypotenuse of a triangle whos legs are 3 &amp; 4?</p>
+        <select>
+            <option value="10">10</option>
+            <option value="5">5</option>
+            <option value="12">12</option>
+        </select>
+        <p>If a 12 ft. tall tree cast a shadow that is 26 feet long, at what angle in the sky is the sun relative to the tree?</p>
+        <select>
+            <option value="10 degrees">10&deg;</option>
+            <option value="3.2 degrees">3.2&deg;</option>
+            <option value="25 degrees">25&deg;</option>
+        </select><br>
+        <p>SHOW YOUR WORK: What is 60&deg; in radians (in terms of &pi;)</p>
+        <textarea placeholder="Show your work here"></textarea><br>
+
+        <input type="submit" onclick="location.reload()">
+    </form>
+</body>
+
+</html>
