--- a/math/index.html
+++ b/math/index.html
@@ -16,24 +16,24 @@
     <h1>Math Test</h1>
     <form>
         <p>What is the proper symbol for multiplication in digital text?</p>
-            <input type="radio" value="x">x<br>
-            <input type="radio" value="star">&#8902;<br>
-            <input type="radio" value="times">times<br>
+            <input type="radio" value="x" name="1">x<br>
+            <input type="radio" value="star" name="1">&#8902;<br>
+            <input type="radio" value="times" name="1">times<br>
 
         <p>What is the correct order of operations?</p>
-            <input type="radio" value="PAMDES">Parenthesis, Additon & Multiplication, Division & Exponents, Subtraction<br>
-            <input type="radio" value="PEDSAM">Parenthesis & Exponents, Division, Subtraction, Addition & Multiplication<br>
-            <input type="radio" value="PEMDAS">Parenthesis, Exponents, Multiplication & Division, Addition & Subtracton<br>
+            <input type="radio" value="PAMDES" name="2">Parenthesis, Additon & Multiplication, Division & Exponents, Subtraction<br>
+            <input type="radio" value="PEDSAM" name="2">Parenthesis & Exponents, Division, Subtraction, Addition & Multiplication<br>
+            <input type="radio" value="PEMDAS" name="2">Parenthesis, Exponents, Multiplication & Division, Addition & Subtracton<br>
 
         <p>What is the hypotenuse of a triangle whos legs are 3 &amp; 4?</p>
-            <input type="radio" value="10">10<br>
-            <input type="radio" value="5">5<br>
-            <input type="radio" value="12">12<br>
+            <input type="radio" value="10" name="3">10<br>
+            <input type="radio" value="5" name="3">5<br>
+            <input type="radio" value="12" name="3">12<br>
 
         <p>If a 12 ft. tall tree cast a shadow that is 26 feet long, at what angle in the sky is the sun relative to the tree?</p>
-            <input type="radio" value="10 degrees">10&deg;<br>
-            <input type="radio" value="3.2 degrees">3.2&deg;<br>
-            <input type="radio" value="25 degrees">25&deg;<br>
+            <input type="radio" value="10 degrees" name="4">10&deg;<br>
+            <input type="radio" value="3.2 degrees" name="4">3.2&deg;<br>
+            <input type="radio" value="25 degrees" name="4">25&deg;<br>
         <br>
         <p>SHOW YOUR WORK: What is 60&deg; in radians (in terms of &pi;)</p>
         <textarea placeholder="Show your work here"></textarea><br>
