--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -26,7 +26,8 @@
 </head>
 
 <body>
-  
+  <h1>Butterfly Puzzle</h1>
+  <p1>Matthew Murten</p1>
   <div class='puzzle'>
     
     <div class='top'>
@@ -54,6 +55,7 @@
       <img src="./4.4_puzzle/puzzle1_K.jpg" alt="asdf">
     </div>
   </div>
+  <p1>4/19/24</p1>
 	
 </body>
 
