--- a/scorecard/bowling.html
+++ b/scorecard/bowling.html
@@ -35,6 +35,7 @@
 	      <td>8</td>
 	      <td>9</td>
 	      <td>10</td>
+	      <td>Total:</td>
 	    </tr>
 	    <!--Row 2-->
 	    <tr>
@@ -49,6 +50,7 @@
 	      <td>4-5</td>
 	      <td>9-0</td>
 	      <td>10-0</td>
+	      <td>85</td>
 	    </tr>
 	    <!--Row 3-->
 	    <tr>
@@ -63,6 +65,7 @@
 	      <td>0-6</td>
 	      <td>5-2</td>
 	      <td>2-6</td>
+	      <td>69</td>
 	    </tr>
 	    
 	  </table>
