--- a/scorecard/golf.html
+++ b/scorecard/golf.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Chess Scorecard</title>
+	<title>Mini-Golf Scorecard</title>
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -35,6 +35,7 @@
 	      <td>Hole 8</td>
 	      <td>Hole 9</td>
 	      <td>Hole 10</td>
+	      <td>Total:</td>
 	    </tr>
 	    <!--Row 2-->
 	    <tr>
@@ -49,6 +50,7 @@
 	      <td>4</td>
 	      <td>3</td>
 	      <td>5</td>
+	      <td>44</td>
 	    </tr>
 	    <!--Row 3-->
 	    <tr>
@@ -63,6 +65,7 @@
 	      <td>4</td>
 	      <td>5</td>
 	      <td>3</td>
+	      <td>44</td>
 	    </tr>
 	    
 	  </table>
