--- a/embed/index.html
+++ b/embed/index.html
@@ -42,7 +42,7 @@
 	
 	<iframe id="iframe2" src="https://player.vimeo.com/video/298400138?h=670c92bd4f" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe><br></p>
 	
-	<p id="p5"><strong>Step 5: Bobs your uncle</strong><br>
+	<p id="p5"><strong>Step 5: Bobs your uncle</strong><br><br><br><br>
 	
 </body>
 
