--- a/immitations/index.html
+++ b/immitations/index.html
@@ -14,17 +14,17 @@
 
 <body>
   <div id="main">
-    <img src="football_field.jpg" id="football_field">
+    <img src="5.4_images-assignment/football_field.jpg" id="football_field">
     <div id="theater_div">
-      <img src="theater_stage.jpg" id="theater_stage">
+      <img src="5.4_images-assignment/theater_stage.jpg" id="theater_stage">
       <p1 id="theater_text">Presenting</p1>
     </div>
     <div id="seagull">
-      <img src="seagull.png">
+      <img src="5.4_images-assignment/seagull.png">
     </div>
-    <img src="penguins.jpg" id="penguins">
-    <img src="dinosaur.png" id="dinosaur">
-    <img src="butterfly.jpg" id="butterfly">
+    <img src="5.4_images-assignment/penguins.jpg" id="penguins">
+    <img src="5.4_images-assignment/dinosaur.png" id="dinosaur">
+    <img src="5.4_images-assignment/butterfly.jpg" id="butterfly">
 	</div>
 </body>
 
