--- a/transitions/index.html
+++ b/transitions/index.html
@@ -71,7 +71,7 @@
         <div class="flashcard" id="card1">
       
         <h1 class="question">IM PICKLE RICKKKKKKK</h1>
-        <img class="answer" src="https://static.wikia.nocookie.net/rickandmorty/images/4/41/Pickle_rick_transparent_edgetrimmed.png/revision/latest?cb=20220105043415" width="50px">
+        <img class="answer" src="pickle_rick.png" width="50px">
       
         </div>
       </div>
