--- a/transitions/index.html
+++ b/transitions/index.html
@@ -39,7 +39,8 @@
       <div class="flashcard" id="card1">
       
         <h1 class="question">This was really annoying to make</h1>
-        <p class="answer">I really wish CSS added a way to detect when you unhover so I could play the card flipping animation again when I stop hovering</p>
+        <p class="answer">I really wish CSS added a way to detect when you unhover so I could play the card flipping animation again when I stop hovering
+	<br><br>Nevermind I just realized you can just put the animation in the unmodified .hoverbox {} rule and just accept the fact that it's going to play when you load the page</p>
       
       </div>
       </div>
