--- a/final/robots.html
+++ b/final/robots.html
@@ -8,7 +8,7 @@
   
   <link rel="shortcut icon" type="image/png" href="https://static.wixstatic.com/media/bf4320_968597f9647e440c93c09df4bc7652c8~mv2.png/v1/fill/w_123,h_114,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/SteelRidge%20Logo%20-%20New2_edited.png">
   
-	<title>Home | Steel Ridge Robotics</title>
+	<title>Robots | Steel Ridge Robotics</title>
   
   <link rel="stylesheet" type="text/css" href="style.css">
 
